Edit libpud exports to fix build on some Qt6 setups

Related issue seems to be described at https://bugreports.qt.io/browse/QTBUG-112332

The fix done at
https://github.com/calamares/calamares/commit/4eba859236777c5764ebd3db883a303ed810ee7b
seems sensible here, too, and doesn't seem to break anything, so let's try that.

BUG: 498058